--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,32 @@ button {
   font-weight: 500;
 }
 
+h1 {
+  font-size: 72px;
+  line-height: 90px;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+input {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #667085;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.primary-btn {
+  background-color: #7e57c2;
+  color: #fff;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 12px;
+  cursor: pointer;
 }
 
 /* Header */
@@ -128,4 +151,77 @@ a {
     transition: all 0.3s ease;
     margin-bottom: 6px;
   }
+}
+
+/* Hero */
+
+#hero {
+  padding: 18px 80px;
+}
+
+.hero-wrapper {
+  width: 100%;
+  padding: 96px 224px 192px;
+  background: linear-gradient(26.57deg, #53389e 8.33%, #6941c6 91.67%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 24px;
+}
+
+.title-secondary {
+  color: #f4ebff;
+  margin-bottom: 24px;
+}
+
+.hero-paragraph {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #e9d7fe;
+  text-align: center;
+  margin-bottom: 48px;
+}
+
+.hero-input-container {
+  display: flex;
+  gap: 16px;
+  max-width: 500px;
+  width: 100%;
+  margin-bottom: 6px;
+}
+
+.hero-input-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-input-wrapper p {
+  width: 100%;
+  max-width: 500px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #e9d7fe;
+}
+
+.hero-input {
+  padding: 12px 14px;
+  border-radius: 8px;
+  border: none;
+  width: 100%;
+  max-width: 360px;
+}
+
+.hero-btn {
+  min-width: 128px;
+  padding: 12px 20px;
+  white-space: nowrap;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  border-radius: 8px;
 }
