--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,12 @@ input {
   font-weight: 400;
   color: #667085;
 }
+p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #667085;
+}
 
 a {
   color: inherit;
@@ -168,14 +174,21 @@ a {
   align-items: center;
   border-radius: 24px;
 }
-
-.title-secondary {
+.hero-title {
+  text-align: center;
+  font-size: clamp(2.25rem, 1.5rem + 3.3333vw, 4.5rem);
+  line-height: clamp(2.75rem, 1.7917rem + 4.2593vw, 5.625rem);
+}
+.hero-title-secondary {
   color: #f4ebff;
   margin-bottom: 24px;
+  font-size: clamp(2.25rem, 1.5rem + 3.3333vw, 4.5rem);
+  line-height: clamp(2.75rem, 1.7917rem + 4.2593vw, 5.625rem);
 }
 
 .hero-paragraph {
-  font-size: 20px;
+  font-size: clamp(1.125rem, 1.0833rem + 0.1852vw, 1.25rem);
+  line-height: clamp(1.75rem, 1.7083rem + 0.1852vw, 1.875rem);
   font-weight: 400;
   line-height: 30px;
   color: #e9d7fe;
@@ -224,4 +237,170 @@ a {
   font-weight: 400;
   line-height: 24px;
   border-radius: 8px;
+}
+
+@media (max-width: 1024px) {
+  .hero-wrapper {
+    padding: 80px 80px 120px;
+  }
+}
+@media (max-width: 768px) {
+  .hero-wrapper {
+    padding: 80px 80px 120px;
+    border-radius: 0;
+  }
+  #hero {
+    padding: 0;
+  }
+}
+@media (max-width: 425px) {
+  .hero-wrapper {
+    padding: 64px 16px 120px;
+    border-radius: 0;
+  }
+  #hero {
+    padding: 0;
+  }
+}
+
+/* Features */
+
+#features {
+  background-color: #f9fafb;
+  padding: 96px 64px;
+}
+.features-wrapper {
+  display: flex;
+  justify-content: space-around;
+  gap: 32px;
+  flex-wrap: wrap;
+}
+.features-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 384px;
+  text-align: center;
+}
+.features-icon {
+  width: 48px;
+  height: 48px;
+  border: 8px solid #f4ebff;
+  background-color: #f4ebff;
+  border-radius: 28px;
+  margin-bottom: 20px;
+}
+.features-title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
+  margin-bottom: 8px;
+  color: #101828;
+}
+.features-paragraph {
+}
+
+/* Integrations */
+
+#integrations {
+  padding: 96px 80px 0;
+}
+
+.integrations-wrapper {
+}
+
+.integrations-title-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.integrations-above-title {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  color: #6941c6;
+  background-color: #f9f5ff;
+  border-radius: 16px;
+  padding: 4px 12px;
+  margin-bottom: 16px;
+}
+
+.integrations-title {
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  color: #101828;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.integrations-title-paragraph {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  max-width: 768px;
+  text-align: center;
+}
+
+.integrations-content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 64px;
+  margin-top: 64px;
+}
+
+.integrations-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 384px;
+  gap: 20px;
+}
+
+.integrations-icon {
+  width: 64px;
+  height: 64px;
+}
+
+.integrations-card-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.integrations-card-title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
+  color: #101828;
+  text-align: center;
+}
+
+.integrations-paragraph {
+  text-align: center;
+}
+
+.integrations-link {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #6941c6;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .integrations-content-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 64px;
+    margin-top: 64px;
+  }
+
+  #integrations {
+    padding: 40px 16px 0;
+  }
 }
