--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ h1 {
   font-size: 72px;
   line-height: 90px;
   font-weight: 600;
-  color: #ffffff;
 }
 
 input {
@@ -55,6 +54,7 @@ a {
 }
 
 /* Header */
+
 .header {
   padding: 1rem 0;
   display: flex;
@@ -174,11 +174,14 @@ a {
   align-items: center;
   border-radius: 24px;
 }
+
 .hero-title {
   text-align: center;
   font-size: clamp(2.25rem, 1.5rem + 3.3333vw, 4.5rem);
   line-height: clamp(2.75rem, 1.7917rem + 4.2593vw, 5.625rem);
+  color: #ffffff;
 }
+
 .hero-title-secondary {
   color: #f4ebff;
   margin-bottom: 24px;
@@ -244,6 +247,7 @@ a {
     padding: 80px 80px 120px;
   }
 }
+
 @media (max-width: 768px) {
   .hero-wrapper {
     padding: 80px 80px 120px;
@@ -253,6 +257,7 @@ a {
     padding: 0;
   }
 }
+
 @media (max-width: 425px) {
   .hero-wrapper {
     padding: 64px 16px 120px;
@@ -269,12 +274,14 @@ a {
   background-color: #f9fafb;
   padding: 96px 64px;
 }
+
 .features-wrapper {
   display: flex;
   justify-content: space-around;
   gap: 32px;
   flex-wrap: wrap;
 }
+
 .features-card {
   display: flex;
   flex-direction: column;
@@ -282,6 +289,7 @@ a {
   max-width: 384px;
   text-align: center;
 }
+
 .features-icon {
   width: 48px;
   height: 48px;
@@ -290,6 +298,7 @@ a {
   border-radius: 28px;
   margin-bottom: 20px;
 }
+
 .features-title {
   font-size: 20px;
   line-height: 30px;
@@ -297,13 +306,14 @@ a {
   margin-bottom: 8px;
   color: #101828;
 }
+
 .features-paragraph {
 }
 
 /* Integrations */
 
 #integrations {
-  padding: 96px 80px 0;
+  padding: 96px 80px 96px;
 }
 
 .integrations-wrapper {
@@ -401,6 +411,93 @@ a {
   }
 
   #integrations {
-    padding: 40px 16px 0;
+    padding: 40px 16px 64px;
+  }
+}
+
+/* Metrics */
+
+#metrics {
+  padding: 96px 80px;
+}
+
+.metrics-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 64px;
+}
+
+.metrics-title-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+}
+
+.metrics-title {
+  font-size: clamp(1.875rem, 1.75rem + 0.5556vw, 2.25rem);
+  line-height: clamp(2.375rem, 2.25rem + 0.5556vw, 2.75rem);
+}
+
+.metrics-subtitle {
+  font-size: clamp(1.125rem, 1.0833rem + 0.1852vw, 1.25rem);
+  line-height: clamp(1.75rem, 1.7083rem + 0.1852vw, 1.875rem);
+}
+
+.metrics-content-container {
+  width: 100%;
+  background-color: #f9f5ff;
+  display: flex;
+  justify-content: space-around;
+  padding: 64px;
+}
+
+.metrics-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.metrics-number {
+  font-size: clamp(3rem, 2.75rem + 1.1111vw, 3.75rem);
+  line-height: clamp(3.75rem, 3.5rem + 1.1111vw, 4.5rem);
+  font-weight: 600;
+  color: #7f56d9;
+}
+
+.metrics-description {
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 500;
+  text-align: center;
+  color: #42307d;
+}
+
+@media (max-width: 425px) {
+  #metrics {
+    padding: 16px;
+  }
+
+  .metrics-wrapper {
+    background-color: #f9f5ff;
+    padding: 40px 24px;
+    border-radius: 16px;
+  }
+
+  .metrics-content-container {
+    flex-direction: column;
+    padding: 40px 24px;
+    gap: 32px;
+  }
+
+  .metrics-title {
+    color: #42307d;
+  }
+
+  .metrics-subtitle {
+    color: #6941c6;
   }
 }
