--- a/styles.css
+++ b/styles.css
@@ -785,3 +785,46 @@ a {
     max-height: unset;
   }
 }
+
+/* FAQ */
+
+#faq {
+  padding: 96px 64px;
+}
+.faq-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.faq-content-container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  max-width: 768px;
+  width: 100%;
+}
+
+.faq-item {
+  width: 100%;
+  display: flex;
+  border-top: 1px solid #eaecf0;
+  justify-content: space-between;
+  padding-top: 24px;
+}
+
+.faq-item:first-child {
+  border-top: none;
+}
+.faq-title {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  color: #101828;
+}
+
+@media (max-width: 425px) {
+  #faq {
+    padding: 64px 16px;
+  }
+}
