--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,7 @@ body {
   color: #333;
   background-color: #fff;
   font-weight: 500;
-  overflow: visible;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -630,8 +630,7 @@ p-from-20-to-18 {
     max-width: 100%;
     height: auto;
     object-fit: contain;
-    position: relative;
-    right: -20px;
+    margin-right: -20px;
   }
 
   #main-features {
