--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,14 @@
 /* Global Styles */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -11,10 +17,7 @@ body {
   background-color: #fff;
   font-weight: 500;
   overflow-x: hidden;
-}
-
-body::-webkit-scrollbar {
-  display: none; /* Hides the scrollbar */
+  width: 100%;
 }
 
 button {
@@ -155,6 +158,7 @@ p-from-20-to-18 {
 
 .hamburger-menu {
   display: none;
+  cursor: pointer;
 }
 
 .hamburger-menu-content {
@@ -167,6 +171,7 @@ p-from-20-to-18 {
   background-color: #ffffff;
   z-index: 100;
   padding: 0 0 24px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .hamburger-nav a {
@@ -217,7 +222,7 @@ p-from-20-to-18 {
   gap: 8px;
 }
 
-.open {
+.hamburger-menu-content.open {
   display: block;
 }
 
@@ -258,7 +263,12 @@ p-from-20-to-18 {
 /* Hero */
 
 #hero {
-  padding: 18px 80px;
+  padding: 32px 80px 96px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
 }
 
 .hero-wrapper {
@@ -269,6 +279,7 @@ p-from-20-to-18 {
   flex-direction: column;
   align-items: center;
   border-radius: 24px;
+  z-index: 4;
 }
 
 .hero-title {
@@ -359,9 +370,44 @@ p-from-20-to-18 {
   bottom: -40px;
 }
 
+.hero-image-container {
+  max-width: 860px;
+  margin-right: -60px;
+  margin-top: -100px;
+  z-index: 5;
+}
+
+.hero-image-container img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.hero-image-mobile {
+  display: none;
+}
+.hero-image-desktop {
+  z-index: 5;
+}
+.pattern-img {
+  position: absolute;
+}
+
+.pattern-left {
+  left: 0;
+  top: 430px;
+  height: auto;
+}
+.pattern-right {
+  right: 80px;
+  bottom: 40px;
+  height: auto;
+  z-index: -2;
+}
+
 @media (max-width: 1024px) {
-  .hero-wrapper {
-    padding: 80px 80px 120px;
+  .hero-image-container {
+    max-width: 700px;
   }
 }
 
@@ -370,6 +416,11 @@ p-from-20-to-18 {
     padding: 80px 80px 120px;
     border-radius: 0;
   }
+
+  .hero-image-container {
+    margin-top: -60px;
+  }
+
   #hero {
     padding: 0;
   }
@@ -390,6 +441,17 @@ p-from-20-to-18 {
   .hero-input {
     min-width: unset;
   }
+
+  .pattern-left {
+    left: 0;
+    z-index: -2;
+    top: 530px;
+  }
+  .pattern-right {
+    right: 10px;
+    bottom: 10px;
+    z-index: -2;
+  }
 }
 
 @media (max-width: 425px) {
@@ -404,6 +466,69 @@ p-from-20-to-18 {
     margin-top: -60px;
     position: relative;
     right: -20px;
+  }
+
+  .hero-image-container {
+    max-width: 374px;
+    margin-right: 0;
+  }
+  .hero-image-mobile {
+    display: block;
+  }
+  .hero-image-desktop {
+    display: none;
+  }
+
+  .pattern-left {
+    width: 160px;
+    left: 0;
+    bottom: 220px;
+    z-index: -2;
+  }
+  .pattern-right {
+    width: 160px;
+    right: 0;
+    bottom: 20px;
+    z-index: -2;
+  }
+}
+@media (max-width: 375px) {
+  .pattern-left {
+    left: -20px;
+    width: 140px;
+    top: 510px;
+    z-index: -2;
+  }
+  .pattern-right {
+    width: 160px;
+    right: -60px;
+    bottom: 124px;
+    z-index: -2;
+    margin-right: -40px;
+  }
+}
+
+@media (max-width: 360px) {
+  .hero-image-container {
+    max-width: 36x0px;
+    margin-right: 0;
+  }
+  .hero-image-mobile {
+    display: block;
+  }
+
+  .pattern-left {
+    left: -20px;
+    width: 140px;
+    top: 600px;
+    z-index: -2;
+  }
+  .pattern-right {
+    width: 160px;
+    right: -60px;
+    bottom: 94px;
+    z-index: -2;
+    margin-right: -40px;
   }
 }
 
@@ -555,6 +680,12 @@ p-from-20-to-18 {
   }
 }
 
+@media (min-width: 1441px) {
+  .integrations-content-wrapper {
+    justify-content: center;
+    gap: 64px;
+  }
+}
 /* Metrics */
 
 #metrics {
