--- a/public/styles.css
+++ b/public/styles.css
@@ -60,6 +60,10 @@ a {
   cursor: pointer;
 }
 
+.primary-btn:hover {
+  background-color: #6941c6;
+}
+
 .secondary-btn {
   background-color: #fff;
   color: #344054;
@@ -69,16 +73,32 @@ a {
   cursor: pointer;
 }
 
-h2-from-36-to-30 {
+.secondary-btn:hover {
+  background-color: #d0d5dd;
+}
+
+.h2-from-36-to-30 {
   font-size: clamp(1.875rem, 1.75rem + 0.5556vw, 2.25rem);
   line-height: clamp(2.375rem, 2.25rem + 0.5556vw, 2.75rem);
   font-weight: 600;
 }
 
-p-from-20-to-18 {
+.p-from-20-to-18 {
   font-size: clamp(1.125rem, 1.0833rem + 0.1852vw, 1.25rem);
   line-height: clamp(1.75rem, 1.7083rem + 0.1852vw, 1.875rem);
   font-weight: 400;
+}
+
+.p-16 {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.p-14 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 /* Header */
@@ -141,6 +161,11 @@ p-from-20-to-18 {
   border: none;
   cursor: pointer;
   color: #667085;
+  border-radius: 8px;
+}
+
+.login-btn:hover {
+  background-color: #d0d5dd;
 }
 
 .signup-btn {
@@ -156,6 +181,89 @@ p-from-20-to-18 {
   background-color: #6a44a7;
 }
 
+.header-resources-dropdown-container {
+  position: absolute;
+  top: 68px;
+  left: 120px;
+  width: 100%;
+  height: auto;
+  background-color: #ffffff;
+  z-index: 100;
+  transition: transform 0.3s ease-in-out;
+  border: 1px solid #eaecf0;
+  border-radius: 8px;
+  max-width: 640px;
+  display: none;
+}
+
+.header-resources-dropdown-wrapper {
+  display: flex;
+}
+
+.header-dropdown-left {
+  padding: 0 20px 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.header-dropdown-left-icon {
+  width: 24px;
+  height: 24px;
+}
+.header-dropdown-left-item {
+  display: flex;
+  gap: 16px;
+  cursor: pointer;
+}
+
+.header-dropdown-left-item-text {
+}
+
+.header-dropdown-right {
+  padding: 20px 20px 36px;
+  background-color: #f9fafb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-dropdown-right-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 264px;
+  padding: 12px;
+  gap: 24px;
+}
+
+.header-dropdown-right-img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  max-width: 240px;
+  border-radius: 6px;
+}
+
+.header-dropdown-right-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-dropdown-right-text-bottom {
+  margin-top: 12px;
+  display: flex;
+  gap: 12px;
+}
+.header-dropdown-right-text-bottom p {
+  font-weight: 500;
+  cursor: pointer;
+}
+.header-dropdown-right-text-bottom p:last-child {
+  color: #6941c6;
+}
 .hamburger-menu {
   display: none;
   cursor: pointer;
@@ -213,9 +321,6 @@ p-from-20-to-18 {
 }
 
 .footer-menu-links-left {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 500;
   color: #667085;
   display: flex;
   flex-direction: column;
@@ -338,9 +443,7 @@ p-from-20-to-18 {
   min-width: 128px;
   padding: 12px 20px;
   white-space: nowrap;
-  font-size: 16px;
   font-weight: 400;
-  line-height: 24px;
   border-radius: 8px;
 }
 
@@ -386,9 +489,11 @@ p-from-20-to-18 {
 .hero-image-mobile {
   display: none;
 }
+
 .hero-image-desktop {
   z-index: 5;
 }
+
 .pattern-img {
   position: absolute;
 }
@@ -398,11 +503,23 @@ p-from-20-to-18 {
   top: 430px;
   height: auto;
 }
+
 .pattern-right {
   right: 80px;
   bottom: 40px;
   height: auto;
   z-index: -2;
+}
+@media (min-width: 1442px) {
+  .pattern-left {
+    left: 0;
+    top: 430px;
+  }
+
+  .pattern-right {
+    right: 360px;
+    bottom: 40px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -424,6 +541,7 @@ p-from-20-to-18 {
   #hero {
     padding: 0;
   }
+
   .hero-input-wrapper {
     flex-direction: column;
   }
@@ -438,6 +556,7 @@ p-from-20-to-18 {
   .hero-btn {
     width: 100%;
   }
+
   .hero-input {
     min-width: unset;
   }
@@ -447,6 +566,7 @@ p-from-20-to-18 {
     z-index: -2;
     top: 530px;
   }
+
   .pattern-right {
     right: 10px;
     bottom: 10px;
@@ -459,9 +579,11 @@ p-from-20-to-18 {
     padding: 64px 16px 120px;
     border-radius: 0;
   }
+
   #hero {
     padding: 0;
   }
+
   .hero-img {
     margin-top: -60px;
     position: relative;
@@ -472,9 +594,11 @@ p-from-20-to-18 {
     max-width: 374px;
     margin-right: 0;
   }
+
   .hero-image-mobile {
     display: block;
   }
+
   .hero-image-desktop {
     display: none;
   }
@@ -485,6 +609,7 @@ p-from-20-to-18 {
     bottom: 220px;
     z-index: -2;
   }
+
   .pattern-right {
     width: 160px;
     right: 0;
@@ -492,13 +617,15 @@ p-from-20-to-18 {
     z-index: -2;
   }
 }
+
 @media (max-width: 375px) {
   .pattern-left {
-    left: -20px;
+    left: -28px;
     width: 140px;
     top: 510px;
     z-index: -2;
   }
+
   .pattern-right {
     width: 160px;
     right: -60px;
@@ -571,16 +698,10 @@ p-from-20-to-18 {
   color: #101828;
 }
 
-.features-paragraph {
-}
-
 /* Integrations */
 
 #integrations {
   padding: 96px 80px 96px;
-}
-
-.integrations-wrapper {
 }
 
 .integrations-title-wrapper {
@@ -604,7 +725,6 @@ p-from-20-to-18 {
   font-size: clamp(1.875rem, 1.75rem + 0.5556vw, 2.25rem);
   line-height: clamp(2.375rem, 2.25rem + 0.5556vw, 2.75rem);
   font-weight: 600;
-  line-height: 44px;
   color: #101828;
   margin-bottom: 20px;
   text-align: center;
@@ -820,6 +940,7 @@ p-from-20-to-18 {
   .features-mockup-desktop {
     display: none;
   }
+
   .features-mockup-mobile {
     display: block;
     max-width: 100%;
@@ -886,12 +1007,6 @@ p-from-20-to-18 {
   color: #101828;
 }
 
-.pricing-card-description {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-}
-
 .pricing-card-price-wrapper {
   display: flex;
 }
@@ -907,11 +1022,15 @@ p-from-20-to-18 {
 
 .pricing-card-price span {
   font-size: 36px;
+  position: relative;
+  top: -4px;
 }
 
 .pricing-card-price-text {
   display: flex;
   align-items: end;
+  position: relative;
+  top: -8px;
 }
 
 .pricing-card-header-title-flag {
@@ -937,16 +1056,12 @@ p-from-20-to-18 {
 
 .pricing-card-content-title {
   font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
   color: #101828;
   text-transform: uppercase;
 }
 
 .pricing-card-content-description {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 /* Pricing card content list */
@@ -968,12 +1083,6 @@ p-from-20-to-18 {
 .pricing-content-list-item {
   display: flex;
   gap: 12px;
-}
-
-.pricing-content-list-item p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 .pricing-content-list-item img {
@@ -1120,8 +1229,6 @@ p-from-20-to-18 {
 
 .faq-btn {
   padding: 12px 20px;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 @media (max-width: 425px) {
@@ -1229,10 +1336,8 @@ footer {
 }
 
 .footer-links-list li {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 500;
   color: #6941c6;
+  cursor: pointer;
 }
 
 .footer-links-list li span {
